removing duplicated tags when scraping tags from Cristin entry (#1632)
* removing duplicated tags when scraping tags from Cristin entry

* trim tags before comparison + removing original tag